Wed May 05 13:59:47 BST 2004  Olly Betts <olly@survex.com>

	* docs/scalability.html: Reworded to remove use of first person.

Mon May 03 21:42:05 BST 2004  Olly Betts <olly@survex.com>

	* Makefile.am: Improved wording of a FIXME comment.

Sun May 02 10:18:55 BST 2004  Olly Betts <olly@survex.com>

	* backends/quartz/btree.cc: Improved a couple of comments.

Sat May 01 04:42:43 BST 2004  Olly Betts <olly@survex.com>

	* backends/quartz/btree.cc,backends/quartz/btree.h,
	  backends/quartz/quartz_table.cc: Reopening the readonly version
	  of a writable Btree is now more efficient.

Sat May 01 01:41:24 BST 2004  Olly Betts <olly@survex.com>

	* PLATFORMS: Added up-to-date success reports for x86-openbsd and
	  x86-solaris.

Fri Apr 30 04:05:15 BST 2004  Olly Betts <olly@survex.com>

	* backends/quartz/: Don't delete and reload the Btree_base just after
	  saving it - instead reuse the existing Btree_base object.

Fri Apr 30 02:41:50 BST 2004  Olly Betts <olly@survex.com>

	* backends/quartz/btree.cc: Clean up new code in Btree::commit()
	  from last change.

Thu Apr 29 22:41:05 BST 2004  Olly Betts <olly@survex.com>

	* backends/quartz/btree.cc,backends/quartz/quartz_table.cc: Don't
	  close and reopen the database table file descriptors every time
	  we flush changes.

Thu Apr 29 22:40:36 BST 2004  Olly Betts <olly@survex.com>

	* docs/quartzdesign.html: Improved wording in a couple of places.

Thu Apr 29 16:50:45 BST 2004  Olly Betts <olly@survex.com>

	* backends/quartz/bcursor.cc: Removed references to Btree::error
	  from debug code since Btree::error was removed a week ago.

Tue Apr 27 20:46:25 BST 2004  Olly Betts <olly@survex.com>

	* backends/quartz/btree.cc,configure.in: Added configure test for
	  glibc, because otherwise we need to include a header before we
	  can check for glibc in order to define something we should be
	  defining before we include any headers!

Tue Apr 27 17:45:51 BST 2004  Olly Betts <olly@survex.com>
